--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lato:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+<link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -82,7 +85,7 @@
                 Projects)
               </li>
               <li>
-                <strong>Experience:</strong> 3+ Years — Full-Stack & Cloud
+                <strong>Experience:</strong> 5+ Years — Full-Stack & Cloud
               </li>
               <li>
                 <strong>Skills:</strong> React, Node, Python, GCP, CI/CD, TDD
@@ -272,8 +275,9 @@
           <div class="topic">Test Driven Development</div>
         </div>
 
-        <a class="btn btn-primary" href="#contact">Work With Me</a>
-      </div>
+            <p class="cta-row">
+              <a class="btn btn-outline" href="#contact">Work Together</a>
+            </p>
     </section>
 
     <section id="foundation" class="section foundation-section">
@@ -347,11 +351,61 @@
         </div>
       </div>
     </section>
-    <footer>
-      <small
-        >© <span id="year"></span> Nikhil Bisen. All Rights Reserved.</small
-      >
-    </footer>
+<footer class="nb-footer">
+  <div class="footer-top">
+
+    <!-- Social Row -->
+    <div class="footer-social">
+      <span>Follow me</span>
+  <a href="#" class="fa-youtube fa-icon"><i class="fab fa-youtube"></i></a>
+  <a href="#" class="fa-x fa-icon"><i class="fab fa-x-twitter"></i></a>
+  <a href="#" class="fa-facebook fa-icon"><i class="fab fa-facebook"></i></a>
+  <a href="#" class="fa-linkedin fa-icon"><i class="fab fa-linkedin"></i></a>
+    </div>
+
+    <!-- Link Groups -->
+    <div class="footer-links">
+
+      <div class="footer-column">
+        <h4>Portfolio</h4>
+        <a href="#about">About Me</a>
+        <a href="#bisenEnterprise">BisenEnterprise</a>
+        <a href="#projects">Projects</a>
+        <a href="#speaking">Speaking Topics</a>
+      </div>
+
+      <div class="footer-column">
+        <h4>Resources</h4>
+        <a href="https://github.com/nikhilvikram" target="_blank">GitHub</a>
+        <a href="https://linkedin.com/in/nikhil-bisen-4a2b17169" target="_blank">LinkedIn</a>
+        <a href="mailto:nikhilbisen25@gmail.com">Email Me</a>
+      </div>
+
+      <div class="footer-column">
+        <h4>Company</h4>
+        <a href="#">About This Site</a>
+        <a href="#">Terms & Privacy</a>
+        <a href="#">Open Source</a>
+      </div>
+
+      <div class="footer-column">
+        <h4>Support</h4>
+        <a href="#contact">Contact</a>
+        <a href="#">Help Center</a>
+        <a href="#">Report Issue</a>
+      </div>
+
+    </div>
+  </div>
+</footer>
+  <div class="footer-bottom">
+    <div class="footer-left">© <span id="year"></span> Nikhil Bisen</div>
+
+    <div class="footer-right">
+      <a href="#">Help</a>
+      <a href="#">English - India</a>
+    </div>
+  </div>
 
     <script src="script.js"></script>
   </body>
