UI improve new contact icons footer

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
               <li>Clean code structure & scalable folder architecture</li>
             </ul>
 
-            <h3>Your Role</h3>
+            <h3>My Role</h3>
             <ul class="feature-list">
               <li>Designed the entire UI UX layout</li>
               <li>Built reusable component library</li>
@@ -301,56 +301,64 @@
           </div>
 
           <div class="foundation-media">
-            <img src="/images/mission.jpg" class="foundation-image" />
           </div>
         </div>
       </div>
     </section>
 
-    <section id="contact" class="section contact-section">
-      <div class="container">
-        <h2 class="section-title">Contact</h2>
+    <section id="contact" class="contact-wrapper">
+  <div class="contact-container">
 
-        <div class="contact-card">
-          <form id="contactForm">
-            <div class="form-row">
-              <input type="text" name="name" placeholder="Your Name" required />
-              <input
-                type="email"
-                name="email"
-                placeholder="Your Email"
-                required
-              />
-            </div>
+    <h2 class="section-title">Let’s Connect</h2>
+    <p class="contact-subtitle">Feel free to reach out for collaborations, projects, or opportunities.</p>
 
-            <textarea
-              name="message"
-              rows="6"
-              placeholder="Message"
-              required
-            ></textarea>
+    <div class="contact-grid">
 
-            <button type="submit" class="btn btn-primary">Send Message</button>
-          </form>
-
-          <div class="contact-info">
-            <p>
-              <strong>Email:</strong>
-              <a href="mailto:nikhilbisen25@gmail.com"
-                >nikhilbisen25@gmail.com</a
-              >
-            </p>
-            <p><strong>Phone:</strong> 9767853662</p>
-            <p>
-              <strong>LinkedIn:</strong>
-              <a href="https://linkedin.com/in/nikhil-bisen-4a2b17169"
-                >LinkedIn Profile</a
-              >
-            </p>
+      <!-- CONTACT FORM -->
+      <div class="contact-form glass-card">
+        <form id="contactForm">
+          <div class="form-row">
+            <input type="text" name="name" placeholder="Your Name" required />
+            <input type="email" name="email" placeholder="Your Email" required />
           </div>
-        </div>
+
+          <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
+
+          <button type="submit" class="btn btn-primary contact-btn">Send Message</button>
+        </form>
       </div>
-    </section>
+
+      <!-- CONTACT INFO -->
+      <div class="contact-details glass-card">
+        <h3>Contact Information</h3>
+
+        <div class="info-row">
+          <i class="fas fa-envelope "></i>
+          <a class="link-detail" href="mailto:nikhilbisen25@gmail.com">nikhilbisen25@gmail.com</a>
+        </div>
+
+        <div class="info-row">
+          <i class="fas fa-phone"></i>
+          9767853662
+        </div>
+
+        <div class="info-row">
+          <i class="fab fa-linkedin"></i>
+          <a class="link-detail" href="https://linkedin.com/in/nikhil-bisen-4a2b17169" target="_blank">LinkedIn Profile</a>
+        </div>
+
+        <div class="social-icons">
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-github"></i>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+</section>
+
 <footer class="nb-footer">
   <div class="footer-top">
 
