--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </blockquote>
 
             <p class="lead">
-              I’m <strong>Nikhil Bisen</strong>, a Software Engineer with 3+
+              I’m <strong>Nikhil Bisen</strong>, a Software Engineer with 5+
               years of experience working on cloud-native applications, frontend
               engineering, CI/CD pipelines, and high-impact development for
               Google Chrome projects. I specialize in React.js, Node.js, Python,
@@ -103,7 +103,7 @@
               </li>
               <li><strong>Location:</strong> Pune, India</li>
               <li><strong>Email:</strong> nikhilbisen25@gmail.com</li>
-              <li><strong>Phone:</strong> 9767853662</li>
+              <li class="fas fa-phone link-detail"><strong>Phone:</strong> +919767853662</li>
             </ul>
 
             <p><a class="btn btn-outline" href="#contact">Get in Touch</a></p>
@@ -371,8 +371,8 @@
         </div>
 
         <div class="info-row">
-          <i class="fas fa-phone"></i>
-          9767853662
+          <i class="fas fa-phone link-detail"></i>
+          +919767853662
         </div>
 
         <div class="info-row">
