phone bug black

--- a/index.html
+++ b/index.html
@@ -370,10 +370,7 @@
           <a class="link-detail" href="mailto:nikhilbisen25@gmail.com">nikhilbisen25@gmail.com</a>
         </div>
 
-        <div class="info-row">
-          <i class="fas fa-phone link-detail"></i>
-          +919767853662
-        </div>
+        <i class="fas fa-phone"></i> <strong>Phone:</strong> <span style="color:#000;">+919767853662</span>
 
         <div class="info-row">
           <i class="fab fa-linkedin"></i>
