phone bug black2

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </li>
               <li><strong>Location:</strong> Pune, India</li>
               <li><strong>Email:</strong> nikhilbisen25@gmail.com</li>
-              <li><i class="fas fa-phone"></i> <strong>Phone:</strong> <span style="color:#000;">+919767853662</span></li>
+              <li class="fas fa-phone"><strong>Phone:</strong><p class="my_Phone"> +919767853662</p></li>
             </ul>
 
             <p><a class="btn btn-outline" href="#contact">Get in Touch</a></p>
@@ -370,7 +370,10 @@
           <a class="link-detail" href="mailto:nikhilbisen25@gmail.com">nikhilbisen25@gmail.com</a>
         </div>
 
-        <i class="fas fa-phone"></i> <strong>Phone:</strong> <span style="color:#000;">+919767853662</span>
+        <div class="info-row">
+          <i class="fas fa-phone link-detail"></i>
+          +919767853662
+        </div>
 
         <div class="info-row">
           <i class="fab fa-linkedin"></i>
