--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </li>
               <li><strong>Location:</strong> Pune, India</li>
               <li><strong>Email:</strong> nikhilbisen25@gmail.com</li>
-              <li ><strong>Phone:</strong> +91 9767853662</li>
+              <li ><strong>Phone:</strong> +919767853662</li>
             </ul>
 
             <p><a class="btn btn-outline" href="#contact">Get in Touch</a></p>
