Add git hosted site

--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
             Vite with complete product listing, wishlist, cart, and category
             management.
           </p>
-
-          <a
+                    <a
             href="https://github.com/nikhilvikram/BisenEnterprise"
             target="_blank"
             class="github-badge"
@@ -214,7 +213,13 @@
               architecture, fast routing, dynamic product rendering, and
               real-time cart & wishlist interactions.
             </p>
-
+          <a
+            href="https://nikhilvikram.github.io/BisenEnterprise/#/HomePage"
+            target="_blank"
+            class="github-badge"
+          >
+            BisenEnterprise on git server (Mobile)
+          </a>
             <h3>Tech Stack</h3>
             <div class="tech-grid">
               <span class="tech">React.js</span>
